@@ -1,3 +1,14 @@
+2021-08-25  Per Arne Vollan  <pvollan@apple.com>
+
+        Build error preprocessing sandbox
+        https://bugs.webkit.org/show_bug.cgi?id=229418
+
+        Reviewed by Alexey Proskuryakov.
+
+        Skip unneeded commands when preprocessing sandbox on iOS.
+
+        * Scripts/generate-derived-sources.sh:
+
 2021-08-25  Wenson Hsieh  <wenson_hsieh@apple.com>
 
         [iOS 15] editing/input/cocoa/autocorrect-on.html times out when run after editing/input/cocoa/autocorrect-off.html
